<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_goal_bg"
    android:paddingTop="20dp"
    tools:context=".presentation.ui.article.ArticleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/back_ic"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/article_back"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvMyGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/article_heading"
            android:textColor="@android:color/white"
            android:textSize="40sp" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivArticleCover"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/article_im"
            android:contentDescription="@string/article_cover_content_description"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Article"
            app:strokeColor="#F23230"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_input_goal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvArticleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/article_heading"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Orion Varela: The Quiet Rise" />

            <TextView
                android:id="@+id/tvArticleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#D8FFFFFF"
                android:textSize="16sp"
                tools:text="I grew up in a coastal town where the wind never rested..." />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>